# zimit-manager-api

./: .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: run_server.sh
src/zimit_manager/: enums.py  exceptions.py  main.py  models.py
src/zimit_manager/db/: __init__.py  core.py  executions.py  tasks.py
src/zimit_manager/server/: core.py  util.py
src/zimit_manager/server/routers/: executions.py  tasks.py
src/zimit_manager/services/: docker_service.py  zimit_service.py
tests/: conftest.py  factories.py  test_models.py
tests/db/: test_executions_db.py  test_tasks_db.py
tests/server/routers/: test_tasks_router.py
tests/services/: test_docker_service.py  test_zimit_service.py
