[project]
name = "zimit-manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Amy Langley", email = "amy.a.langley@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
